--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: Build Docker image
+name: Build, Scan & Push Docker Image
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 jobs:
-  build:
+  docker:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,9 +24,30 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build Docker image
+        uses: docker/build-push-action@v4
+        id: build
+        with:
+          context: .
+          push: false   # don’t push yet
+          tags: |
+            ghcr.io/the-may/telegram_dicebot:latest
+            ghcr.io/the-may/telegram_dicebot:${{ github.sha }}
+
+      - name: Scan Docker image for vulnerabilities
+        uses: aquasec/trivy-action@v2
+        with:
+          image-ref: ghcr.io/the-may/telegram_dicebot:${{ github.sha }}
+          format: table
+          exit-code: 1
+          severity: HIGH,CRITICAL
+
+      - name: Push Docker image (if scan passed)
+        if: success()
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ghcr.io/the-may/telegram_dicebot:latest
+          tags: |
+            ghcr.io/the-may/telegram_dicebot:latest
+            ghcr.io/the-may/telegram_dicebot:${{ github.sha }}
